exports[`test the round add button matches the snapshot 1`] = `
<button
  aria-label="Add"
  className="hTtZiN">
  ButtonValue
</button>
`;

exports[`test the round add button with button type given matches the snapshot 1`] = `
<button
  aria-label="Add"
  className="hTtZiN"
  type="button">
  ButtonValue
</button>
`;
